bowser-core/src/main/java/com/linkedin/bowser/core/grammar/gen/NQLParser.java
/*
 * Copyright 2010-2011 LinkedIn Corporation
 * 
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

// $ANTLR 3.2 Sep 23, 2009 12:02:23 java/com/linkedin/nql/core/grammar/NQL.g 2010-10-26 14:31:13
 
package com.linkedin.bowser.core.grammar.gen;

import org.antlr.runtime.RecognitionException;

import com.linkedin.bowser.core.exceptions.QueryRuntimeException;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class NQLParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "LIST", "MAP", "ENTRY", "TUPLE", "SET", "ASSIGNMENT", "UNARY_MINUS", "LIST_COMPREHENSION", "SYMBOL", "SUBSCRIPT", "SLICE", "S_START", "S_END", "FUNCTION", "ATTR", "VERSION", "L_ROUND", "R_ROUND", "L_SQUARE", "R_SQUARE", "L_CURLY", "R_CURLY", "SEMI", "ASSIGN", "FOR", "IF", "SORT", "LIMIT", "SELECT", "REDUCE", "FROM", "WHERE", "ORDERBY", "GROUPBY", "DESC", "AS", "TRUE", "FALSE", "COND", "NOT", "EQ", "NEQ", "LTE", "LT", "GTE", "GT", "AND", "OR", "EMPTY", "IN", "PLUS", "MINUS", "TIMES", "DIVIDE", "MOD", "ID", "INT", "LONG", "FLOAT", "STRING", "NONE", "EXPONENT", "NEWLINE", "COMMENT", "WS", "ESC_SEQ", "CHAR", "HEX_DIGIT", "UNICODE_ESC", "OCTAL_ESC", "':'", "','", "'.'"
    };
    public static final int FUNCTION=17;
    public static final int WHERE=35;
    public static final int EXPONENT=65;
    public static final int LT=47;
    public static final int R_SQUARE=23;
    public static final int MOD=58;
    public static final int LIMIT=31;
    public static final int GTE=48;
    public static final int OCTAL_ESC=73;
    public static final int CHAR=70;
    public static final int L_ROUND=20;
    public static final int FOR=28;
    public static final int FLOAT=62;
    public static final int VERSION=19;
    public static final int ORDERBY=36;
    public static final int NOT=43;
    public static final int SLICE=14;
    public static final int ID=59;
    public static final int AND=50;
    public static final int EOF=-1;
    public static final int LTE=46;
    public static final int R_CURLY=25;
    public static final int IF=29;
    public static final int AS=39;
    public static final int TUPLE=7;
    public static final int ESC_SEQ=69;
    public static final int IN=53;
    public static final int PLUS=54;
    public static final int EQ=44;
    public static final int COMMENT=67;
    public static final int S_START=15;
    public static final int SELECT=32;
    public static final int ATTR=18;
    public static final int GROUPBY=37;
    public static final int DIVIDE=57;
    public static final int SYMBOL=12;
    public static final int LIST_COMPREHENSION=11;
    public static final int UNICODE_ESC=72;
    public static final int R_ROUND=21;
    public static final int HEX_DIGIT=71;
    public static final int SORT=30;
    public static final int UNARY_MINUS=10;
    public static final int SET=8;
    public static final int INT=60;
    public static final int ENTRY=6;
    public static final int MINUS=55;
    public static final int LIST=4;
    public static final int SEMI=26;
    public static final int TRUE=40;
    public static final int EMPTY=52;
    public static final int WS=68;
    public static final int NEQ=45;
    public static final int NEWLINE=66;
    public static final int SUBSCRIPT=13;
    public static final int NONE=64;
    public static final int OR=51;
    public static final int S_END=16;
    public static final int MAP=5;
    public static final int ASSIGN=27;
    public static final int GT=49;
    public static final int ASSIGNMENT=9;
    public static final int L_CURLY=24;
    public static final int DESC=38;
    public static final int TIMES=56;
    public static final int T__76=76;
    public static final int FROM=34;
    public static final int LONG=61;
    public static final int COND=42;
    public static final int FALSE=41;
    public static final int T__75=75;
    public static final int T__74=74;
    public static final int L_SQUARE=22;
    public static final int REDUCE=33;
    public static final int STRING=63;

    // delegates
    // delegators


        public NQLParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public NQLParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
            this.state.ruleMemo = new HashMap[88+1];
             
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return NQLParser.tokenNames; }
    public String getGrammarFileName() { return "java/com/linkedin/nql/core/grammar/NQL.g"; }


    Stack<String> paraphrases = new Stack<String>();

    protected void mismatch(IntStream input, int ttype, BitSet follow) 
      throws RecognitionException
    {
      throw new MismatchedTokenException(ttype, input);
    }
      
    public Object recoverFromMismatchedSet(IntStream input, RecognitionException e, BitSet follow) 
      throws RecognitionException
    {
      throw e;
    }

    protected void pushCtx(String context)
    {
      paraphrases.push(context);
    }

    protected void popCtx()
    {
      paraphrases.pop();
    }

    @Override
    public String getErrorMessage(RecognitionException e, String[] tokenNames)
    {
      String msg = super.getErrorMessage(e, tokenNames);
      if (!paraphrases.isEmpty())
      {
        String paraphrase = paraphrases.peek();
        msg = msg + " " + paraphrase;
      }
      return msg;
    }


    public static class program_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "program"
    // java/com/linkedin/nql/core/grammar/NQL.g:136:1: program : ( stmt )+ ;
    public final NQLParser.program_return program() throws RecognitionException {
        NQLParser.program_return retval = new NQLParser.program_return();
        retval.start = input.LT(1);
        int program_StartIndex = input.index();
        CommonTree root_0 = null;

        NQLParser.stmt_return stmt1 = null;



        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }
            // java/com/linkedin/nql/core/grammar/NQL.g:137:2: ( ( stmt )+ )
            // java/com/linkedin/nql/core/grammar/NQL.g:137:4: ( stmt )+
            {
            root_0 = (CommonTree)adaptor.nil();

            // java/com/linkedin/nql/core/grammar/NQL.g:137:4: ( stmt )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==L_ROUND||LA1_0==L_SQUARE||LA1_0==L_CURLY||LA1_0==SELECT||(LA1_0>=TRUE && LA1_0<=FALSE)||LA1_0==NOT||(LA1_0>=PLUS && LA1_0<=MINUS)||(LA1_0>=ID && LA1_0<=NONE)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // java/com/linkedin/nql/core/grammar/NQL.g:0:0: stmt
            	    {
            	    pushFollow(FOLLOW_stmt_in_program595);
            	    stmt1=stmt();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, stmt1.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

        catch (RecognitionException e)
        {
          throw e;
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 1, program_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "program"

    public static class stmt_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "stmt"
    // java/com/linkedin/nql/core/grammar/NQL.g:140:1: stmt : ( booleanExpression SEMI -> booleanExpression | assignment SEMI -> assignment );
    public final NQLParser.stmt_return stmt() throws RecognitionException {
        NQLParser.stmt_return retval = new NQLParser.stmt_return();
        retval.start = input.LT(1);
        int stmt_StartIndex = input.index();
        CommonTree root_0 = null;

        Token SEMI3=null;
        Token SEMI5=null;
        NQLParser.booleanExpression_return booleanExpression2 = null;

        NQLParser.assignment_return assignment4 = null;


        CommonTree SEMI3_tree=null;
        CommonTree SEMI5_tree=null;
        RewriteRuleTokenStream stream_SEMI=new RewriteRuleTokenStream(adaptor,"token SEMI");
        RewriteRuleSubtreeStream stream_assignment=new RewriteRuleSubtreeStream(adaptor,"rule assignment");
        RewriteRuleSubtreeStream stream_booleanExpression=new RewriteRuleSubtreeStream(adaptor,"rule booleanExpression");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }
            // java/com/linkedin/nql/core/grammar/NQL.g:141:2: ( booleanExpression SEMI -> booleanExpression | assignment SEMI -> assignment )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==L_ROUND||LA2_0==L_SQUARE||LA2_0==L_CURLY||LA2_0==SELECT||(LA2_0>=TRUE && LA2_0<=FALSE)||LA2_0==NOT||(LA2_0>=PLUS && LA2_0<=MINUS)||(LA2_0>=INT && LA2_0<=NONE)) ) {
                alt2=1;
            }
            else if ( (LA2_0==ID) ) {
                int LA2_2 = input.LA(2);

                if ( (LA2_2==ASSIGN) ) {
                    alt2=2;
                }
                else if ( (LA2_2==L_ROUND||LA2_2==L_SQUARE||LA2_2==SEMI||LA2_2==COND||(LA2_2>=EQ && LA2_2<=OR)||(LA2_2>=IN && LA2_2<=MOD)||LA2_2==76) ) {
                    alt2=1;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 2, input);

                    throw nvae;
                }
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // java/com/linkedin/nql/core/grammar/NQL.g:141:4: booleanExpression SEMI
                    {
                    pushFollow(FOLLOW_booleanExpression_in_stmt608);
                    booleanExpression2=booleanExpression();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_booleanExpression.add(booleanExpression2.getTree());
                    SEMI3=(Token)match(input,SEMI,FOLLOW_SEMI_in_stmt610); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_SEMI.add(SEMI3);



                    // AST REWRITE
                    // elements: booleanExpression
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 141:32: -> booleanExpression
                    {
                        adaptor.addChild(root_0, stream_booleanExpression.nextTree());

                    }

                    retval.tree = root_0;}
                    }
                    break;
                case 2 :
                    // java/com/linkedin/nql/core/grammar/NQL.g:142:4: assignment SEMI
                    {
                    pushFollow(FOLLOW_assignment_in_stmt624);
                    assignment4=assignment();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_assignment.add(assignment4.getTree());
                    SEMI5=(Token)match(input,SEMI,FOLLOW_SEMI_in_stmt626); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_SEMI.add(SEMI5);



                    // AST REWRITE
                    // elements: assignment
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 142:32: -> assignment
                    {
                        adaptor.addChild(root_0, stream_assignment.nextTree());

                    }

                    retval.tree = root_0;}
                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

        catch (RecognitionException e)
        {
          throw e;
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 2, stmt_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "stmt"

    public static class assignment_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "assignment"
    // java/com/linkedin/nql/core/grammar/NQL.g:145:1: assignment : ID '=' booleanExpression -> ^( ASSIGNMENT ID booleanExpression ) ;
    public final NQLParser.assignment_return assignment() throws RecognitionException {
        NQLParser.assignment_return retval = new NQLParser.assignment_return();
        retval.start = input.LT(1);
        int assignment_StartIndex = input.index();
        CommonTree root_0 = null;

        Token ID6=null;
        Token char_literal7=null;
        NQLParser.booleanExpression_return booleanExpression8 = null;


        CommonTree ID6_tree=null;
        CommonTree char_literal7_tree=null;
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_ASSIGN=new RewriteRuleTokenStream(adaptor,"token ASSIGN");
        RewriteRuleSubtreeStream stream_booleanExpression=new RewriteRuleSubtreeStream(adaptor,"rule booleanExpression");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }
            // java/com/linkedin/nql/core/grammar/NQL.g:146:3: ( ID '=' booleanExpression -> ^( ASSIGNMENT ID booleanExpression ) )
            // java/com/linkedin/nql/core/grammar/NQL.g:146:5: ID '=' booleanExpression
            {
            ID6=(Token)match(input,ID,FOLLOW_ID_in_assignment655); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ID.add(ID6);

            char_literal7=(Token)match(input,ASSIGN,FOLLOW_ASSIGN_in_assignment657); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ASSIGN.add(char_literal7);

            pushFollow(FOLLOW_booleanExpression_in_assignment659);
            booleanExpression8=booleanExpression();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_booleanExpression.add(booleanExpression8.getTree());


            // AST REWRITE
            // elements: ID, booleanExpression
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 146:31: -> ^( ASSIGNMENT ID booleanExpression )
            {
                // java/com/linkedin/nql/core/grammar/NQL.g:146:35: ^( ASSIGNMENT ID booleanExpression )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(ASSIGNMENT, "ASSIGNMENT"), root_1);

                adaptor.addChild(root_1, stream_ID.nextNode());
                adaptor.addChild(root_1, stream_booleanExpression.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

        catch (RecognitionException e)
        {
          throw e;
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 3, assignment_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "assignment"

    public static class repl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "repl"
    // java/com/linkedin/nql/core/grammar/NQL.g:149:1: repl : ( assignment | booleanExpression );
    public final NQLParser.repl_return repl() throws RecognitionException {
        NQLParser.repl_return retval = new NQLParser.repl_return();
        retval.start = input.LT(1);
        int repl_StartIndex = input.index();
        CommonTree root_0 = null;

        NQLParser.assignment_return assignment9 = null;

        NQLParser.booleanExpression_return booleanExpression10 = null;



        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return retval; }
            // java/com/linkedin/nql/core/grammar/NQL.g:150:3: ( assignment | booleanExpression )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==ID) ) {
                int LA3_1 = input.LA(2);

                if ( (LA3_1==ASSIGN) ) {
                    alt3=1;
                }
                else if ( (LA3_1==EOF||LA3_1==L_ROUND||LA3_1==L_SQUARE||LA3_1==COND||(LA3_1>=EQ && LA3_1<=OR)||(LA3_1>=IN && LA3_1<=MOD)||LA3_1==76) ) {
                    alt3=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 1, input);

                    throw nvae;
                }
            }
            else if ( (LA3_0==L_ROUND||LA3_0==L_SQUARE||LA3_0==L_CURLY||LA3_0==SELECT||(LA3_0>=TRUE && LA3_0<=FALSE)||LA3_0==NOT||(LA3_0>=PLUS && LA3_0<=MINUS)||(LA3_0>=INT && LA3_0<=NONE)) ) {
                alt3=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // java/com/linkedin/nql/core/grammar/NQL.g:150:5: assignment
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_assignment_in_repl686);
                    assignment9=assignment();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, assignment9.getTree());

                    }
                    break;
                case 2 :
                    // java/com/linkedin/nql/core/grammar/NQL.g:151:5: booleanExpression
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_booleanExpression_in_repl705);
                    booleanExpression10=booleanExpression();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, booleanExpression10.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

        catch (RecognitionException e)
        {
          throw e;
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 4, repl_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "repl"

    public static class booleanExpression_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "booleanExpression"
    // java/com/linkedin/nql/core/grammar/NQL.g:154:1: booleanExpression : conditionalExpression ;
    public final NQLParser.booleanExpression_return booleanExpression() throws RecognitionException {
        NQLParser.booleanExpression_return retval = new NQLParser.booleanExpression_return();
        retval.start = input.LT(1);
        int booleanExpression_StartIndex = input.index();
        CommonTree root_0 = null;

        NQLParser.conditionalExpression_return conditionalExpression11 = null;



        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 5) ) { return retval; }
            // java/com/linkedin/nql/core/grammar/NQL.g:155:3: ( conditionalExpression )
            // java/com/linkedin/nql/core/grammar/NQL.g:155:5: conditionalExpression
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_conditionalExpression_in_booleanExpression722);
            conditionalExpression11=conditionalExpression();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, conditionalExpression11.getTree());

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

        catch (RecognitionException e)
        {
          throw e;
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 5, booleanExpression_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "booleanExpression"

    public static class conditionalExpression_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "conditionalExpression"
    // java/com/linkedin/nql/core/grammar/NQL.g:158:1: conditionalExpression : conditionalOrExpression ( COND conditionalExpression ':' conditionalExpression )? ;
    public final NQLParser.conditionalExpression_return conditionalExpression() throws RecognitionException {
        NQLParser.conditionalExpression_return retval = new NQLParser.conditionalExpression_return();
        retval.start = input.LT(1);
        int conditionalExpression_StartIndex = input.index();
        CommonTree root_0 = null;

        Token COND13=null;
        Token char_literal15=null;
        NQLParser.conditionalOrExpression_return conditionalOrExpression12 = null;

        NQLParser.conditionalExpression_return conditionalExpression14 = null;

        NQLParser.conditionalExpression_return conditionalExpression16 = null;


        CommonTree COND13_tree=null;
        CommonTree char_literal15_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 6) ) { return retval; }
            // java/com/linkedin/nql/core/grammar/NQL.g:159:2: ( conditionalOrExpression ( COND conditionalExpression ':' conditionalExpression )? )
            // java/com/linkedin/nql/core/grammar/NQL.g:159:4: conditionalOrExpression ( COND conditionalExpression ':' conditionalExpression )?
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_conditionalOrExpression_in_conditionalExpression735);
            conditionalOrExpression12=conditionalOrExpression();
